# scope-guard

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: async_scope.rs  lib.rs
