[package]
name = "scope-guard"
version = "1.2.0"
authors = ["Douman <douman@gmx.se>"]
edition = "2018"
license = "BSL-1.0"
repository = "https://github.com/DoumanAsh/scope-guard"
description = "Simple RAII scope guard"
keywords = ["scope-guard", "guard", "panic"]
categories = ["no-std"]
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md"
]

[features]
std = []

[package.metadata.docs.rs]
features = ["std"]
